updated style and resolved overflow

--- a/src/app/Components/JoinedGroupList/JoinedGroupList.scss
+++ b/src/app/Components/JoinedGroupList/JoinedGroupList.scss
@@ -57,3 +57,6 @@
     }
 }
 
+.joined-group-list-style{
+    height: 97% ;
+}
