--- a/src/app/Dashboard/PracticeDashboard/practiceDashboard.scss
+++ b/src/app/Dashboard/PracticeDashboard/practiceDashboard.scss
@@ -18,6 +18,14 @@
 
 }
 
+.group-grid-height{
+    height: 45%;
+}
+
+.recent-discussion-height{
+    height: 50%;
+}
+
 .height-30{
     height: 30%;
 }
